@@ -10,6 +10,9 @@ all changes without author attribution are by Doug MacEachern
 
 =item 1.21_01-dev
 
+PerlPassEnv maintains it's value beyond the first request,
+thanks to Chris Thorman for the spot
+
 prevent possible core dump in $r->pnotes if get_module_config returns
 NULL, thanks to Kevin Murphy for the spot
 
